# matthewdeanmartin_pypi

./: .readthedocs.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pages.yml  publish.yml
docs/: conf.py  index.md
docs/spec/: PEP11.md
matthewdeanmartin/: __init__.py  __main__.py  identity.json
spec/: PEP.md  example.html
tests/: test_main.py
